tests/errors/syn_class_var7.java
public class syn_class_var7 {
public static String[] ;
}